feat: add mc package with tests